@@ -1,3 +1,12 @@
+2000-02-03  Sancho Lerena <slerena@artica.es>
+
+	* pandora_db.pl: BUGFIX. DB Maintance was deleting data older than 24hr
+	since commit of 12th January!.
+	
+	* pandora_wmi, pandora_network, pandora_plugin: Algorithm upgraded. 
+	First are executed modules with less margin until be considered down and 
+	modules with flag of manual execution.
+	
 2009-01-30  Ramon Novoa  <rnovoa@artica.es>
 
 	* lib/PandoraFMS/DB.pm: Fixed regexp alerts.
